--- a/package.json
+++ b/package.json
@@ -2,17 +2,21 @@
   "name": "test-angularjs",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc --build"
+    "build": "rimraf src/dist && webpack --bail --progress --profile"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/angular": "^1.8.4",
     "@types/node": "^18.8.3",
-    "typescript": "^4.8.4"
+    "rimraf": "^3.0.2",
+    "ts-loader": "^9.4.1",
+    "typescript": "^4.8.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
     "angular": "^1.2.27",
