--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
         "mapRoot": "./",
         "module": "es6",
         "moduleResolution": "node",
-        "outDir": "../dist/out-tsc",
+        "outDir": "/out-tsc",
         "sourceMap": true,
         "target": "es5",
         "typeRoots": [
